<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="?attr/textAppearanceDisplaySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:text="@string/welcome"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        style="?attr/textAppearanceBodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:alpha="0.6"
        android:text="@string/please_input_your_info"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/select_user_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/roundedImageViewRounded" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/select_user_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        app:layout_constraintEnd_toEndOf="@+id/profileImage"
        app:tint="?attr/colorTertiary" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="false"
        android:ems="10"
        android:hint="@string/input_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="24dp"
        android:enabled="false"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>