<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        tools:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/userName"
        style="?attr/textAppearanceTitleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="?attr/colorOnBackground"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toTopOf="@+id/profileImage"
        tools:text="김민성" />

    <ImageButton
        android:id="@+id/more_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@null"
        android:contentDescription="@string/post_more_button_content_description"
        android:src="@drawable/ic_baseline_more_horiz_24"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profileImage" />

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="12dp"
        android:contentDescription="@string/post_image_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        tools:srcCompat="@drawable/ic_launcher_background" />

    <ToggleButton
        android:id="@+id/likeToggleButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_like_toggle_image"
        android:checked="false"
        android:contentDescription="@string/like_button"
        android:text=""
        android:textOff=""
        android:textOn=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postImage" />

    <TextView
        android:id="@+id/likeCount"
        style="?attr/textAppearanceBodySmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:textColor="?attr/colorOnBackground"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/likeToggleButton"
        tools:text="좋아요 3개" />

    <TextView
        android:id="@+id/content"
        style="?attr/textAppearanceBodyMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/likeCount"
        tools:text="여기에는 내용을 적는 곳이에요." />

    <TextView
        android:id="@+id/timeAgo"
        style="?attr/textAppearanceBodySmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:alpha="0.5"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:text="15분전" />

</androidx.constraintlayout.widget.ConstraintLayout>