<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileEditToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/profile_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnBackground" />

        <TextView
            android:id="@+id/profile_edit_title"
            style="?attr/textAppearanceHeadlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_title"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_edit_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/profile_edit_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnBackground" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profle_edit_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEditToolbar">

        <ImageView
            android:id="@+id/profile_edit_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBar"
            app:shapeAppearance="@style/roundedImageViewRounded"
            app:srcCompat="@drawable/ic_baseline_person_24" />

        <Button
            android:id="@+id/profile_edit_imgButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:background="@android:color/transparent"
            android:text="@string/profile_edit_imgButton"
            android:textColor="@color/md_theme_light_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_img" />

        <TextView
            android:id="@+id/profile_edit_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_name"
            app:layout_constraintBottom_toTopOf="@+id/profile_edit_name"
            app:layout_constraintStart_toStartOf="@+id/profile_edit_name" />

        <TextView
            android:id="@+id/profile_edit_nick_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_nick"
            app:layout_constraintBottom_toTopOf="@+id/profile_edit_name2"
            app:layout_constraintStart_toStartOf="@+id/profile_edit_name2" />

        <TextView
            android:id="@+id/profile_edit_introduce_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_introduce"
            app:layout_constraintBottom_toTopOf="@+id/profile_edit_name3"
            app:layout_constraintStart_toStartOf="@+id/profile_edit_name3" />

        <EditText
            android:id="@+id/profile_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:maxLength="24"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_imgButton" />

        <EditText
            android:id="@+id/profile_edit_name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:maxLength="24"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_name" />

        <EditText
            android:id="@+id/profile_edit_name3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:maxLength="50"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_name2" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>