<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/profile_header_username_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/info_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_header_username_textview">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:scaleType="fitCenter" />

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_horizontal|center_vertical"
            android:textAlignment="center">

            <TableRow
                android:id="@+id/profile_info_num_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3">

                <TextView
                    android:id="@+id/profile_info_postnum_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textSize="48sp" />

                <TextView
                    android:id="@+id/profile_info_followernum_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textSize="48sp" />

                <TextView
                    android:id="@+id/profile_info_followeenum_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textSize="48sp" />
            </TableRow>

            <TableRow
                android:id="@+id/profile_info_text_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3">

                <TextView
                    android:id="@+id/profile_info_posttext_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profile_post"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/profile_info_followertext_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profile_follower"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/profile_info_followingtext_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profile_followee"
                    android:textAlignment="center" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/profile_introduce_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="6"
        android:minLines="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_linearLayout" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_introduce_textview" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_button">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="3"
            tools:listitem="@layout/item_profile_post" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <include
        android:id="@+id/load_state"
        layout="@layout/content_load_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>